force-app/main/default/objects/Rollup_Summary_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator that the setting should be used in rollup logic</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>