force-app/main/default/objects/Rollup_Summary_Setting__mdt/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <description>Child object (the one to be aggregated) API name</description>
    <label>Child Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Rollup_Summary_Settings</relationshipLabel>
    <relationshipName>Rollup_Summary_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>