force-app/main/default/objects/Rollup_Summary_Setting__mdt/fields/Field_To_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Aggregate__c</fullName>
    <description>Field to perform the aggregation on</description>
    <label>Field To Aggregate</label>
    <metadataRelationshipControllingField>Rollup_Summary_Setting__mdt.Child_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Rollup_Summary_Settings</relationshipLabel>
    <relationshipName>Rollup_Summary_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>