force-app/main/default/objects/Rollup_Summary_Setting__mdt/fields/Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field__c</fullName>
    <description>The loockup field from child to parent</description>
    <label>Lookup Field</label>
    <metadataRelationshipControllingField>Rollup_Summary_Setting__mdt.Child_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Rollup_Summary_Settings1</relationshipLabel>
    <relationshipName>Rollup_Summary_Settings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>