force-app/main/default/objects/Rollup_Summary_Setting__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <description>Parent object (the one to aggregate to) API name</description>
    <label>Parent Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Rollup_Summary_Settings1</relationshipLabel>
    <relationshipName>Rollup_Summary_Settings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>