force-app/main/default/objects/Rollup_Summary_Setting__mdt/fields/Rollup_Field__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Field__c</fullName>
    <description>Field where the aggregated account shold be written to</description>
    <label>Rollup Field</label>
    <metadataRelationshipControllingField>Rollup_Summary_Setting__mdt.Parent_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Rollup_Summary_Settings2</relationshipLabel>
    <relationshipName>Rollup_Summary_Settings2</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>