force-app/main/default/objects/Rollup_Summary_Setting__mdt/fields/Rollup_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Filter_Criteria__c</fullName>
    <description>Filtering WHERE conditions to limit the child object records being aggregated</description>
    <label>Rollup Filter Criteria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>