force-app/main/default/objects/Rollup_Summary_Setting__mdt/fields/Rollup_Type__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Type__c</fullName>
    <description>The aggregation operation to be performed (i.e. SUM, AVG, etc.)</description>
    <label>Rollup Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
                <default>true</default>
                <label>SUM</label>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>AVG</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>COUNT_DISTINCT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>